force-app/main/default/objects/Timeslot__c/Timeslot__c.object-meta.xml
<CustomObject>
    <label>Timeslot</label>
    <nameField>
        <displayFormat>TS-{0000000}</displayFormat>
        <label>Timeslot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeslots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>