force-app/main/default/objects/Timeslot__c/fields/Allowed_Commercial_Time__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Commercial_Time__c</fullName>
    <label>Allowed Commercial Time (Seconds)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>