force-app/main/default/objects/Timeslot__c/fields/Program_Genre__c.field-meta.xml
<CustomField>
    <fullName>Program_Genre__c</fullName>
    <label>Program Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>