force-app/main/default/objects/Timeslot__c/fields/Remaining_Commercial_Time__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Commercial_Time__c</fullName>
    <description>The Scheduled Commercial Time (Seconds) subtracted from the Allowed Commercial Time (Seconds).</description>
    <formula>Allowed_Commercial_Time__c - Scheduled_Commercial_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Commercial Time (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>