force-app/main/default/objects/Timeslot__c/fields/Scheduled_Commercial_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Commercial_Time__c</fullName>
    <label>Scheduled Commercial Time (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>