force-app/main/default/objects/Timeslot__c/fields/Timeslot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Timeslot_Date_Time__c</fullName>
    <label>Timeslot Date/Time</label>
    <type>DateTime</type>
</CustomField>