force-app/main/default/objects/Timeslot__c/validationRules/Remaining_Commercial_Time_Less_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Remaining_Commercial_Time_Less_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Remaining_Commercial_Time__c &lt; 0</errorConditionFormula>
    <errorMessage>Remaining Commercial Time cannot be less than zero.</errorMessage>
</ValidationRule>